--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     wearApp project(':wear')
     compile 'com.google.android.gms:play-services-wearable:11.0.4'
     compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:design:26.0.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.android.volley:volley:1.0.0'
